examples/invalid_feature_secret/unknown_secret_provider.argx
module invalid.unknown_secret_provider
secret S { handle "OPENAI_API_KEY" provider Ghost scope adapter access denied source none }
